@@ -30,6 +30,7 @@ systemd (217-1ubuntu1) vivid; urgency=medium
       /etc/writable/ instead.
     - debian/rules: Drop doc dir symlinking. It creates havoc with dpkg
       upgrades, and we already have the automatic per-file symlinking.
+    - debian/rules: Add an epoch to libgudev.
 
  -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 28 Nov 2014 16:26:18 +0100
 
